--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -43,6 +43,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="blue">#FF000065</color>
+    <color name="green">#FF209500</color>
 
     <!--
 		Nordic logo on splash screen.
