grafieken interface geïmplementeerd wel nog geen data in grafieken.

--- a/app/src/main/res/layout/fragment_graph__day.xml
+++ b/app/src/main/res/layout/fragment_graph__day.xml
@@ -21,4 +21,10 @@
         android:layout_marginBottom="343dp"
         android:text="Day" />
 
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/graph" />
+
+
 </RelativeLayout>
