--- a/app/src/main/res/layout/fragment_graph__year.xml
+++ b/app/src/main/res/layout/fragment_graph__year.xml
@@ -14,4 +14,9 @@
         android:layout_centerInParent="true"
         android:text="Year" />
 
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/graph" />
+
 </RelativeLayout>
